2023-05-26  Walter Somerville  <waltersom@gmail.com>

	* DESCRIPTION (Imports): Updated minimum version of Rcpp

2023-01-29  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.2

	* inst/include/toml++/toml.h: New upstream version 3.3.0
	* inst/include/toml++/impl/parser.inl: Idem
	* inst/include/toml++/impl/std_new.h: Idem
	* inst/include/toml++/impl/version.h: Idem
	* inst/include/toml++/impl/preprocessor.h: Idem

2023-01-25  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.1

2023-01-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/toml++/impl/preprocessor.h: Updated upstream version

	* src/Makevars (PKG_CPPFLAGS): Define -DTOML_ENABLE_FLOAT16=0 to
	ensure wider ability to build including arm64 and i386

2023-01-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.2.0

	* inst/include/toml++/toml.h: Comment-out diagnostics suppression for
	clang which CRAN Policy frowns upon
	* src/parse.cpp (getValue): Add one explicit cast
	* src/parse.h (collapsedList): Switch one loop variable to R_xlen_t

	* DESCRIPTION (Description,SystemRequirements): Updated

2023-01-09  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Update for toml++

	* src/parse.cpp: More idiomatic C++17

2023-01-08  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/include/toml++: Upgraded to toml++ 3.2.0 replacing cpptoml

	* src/parse.cpp: Updated to cpptoml interface
	* src/parse.h: Split off with declarations and helpers
	* R/parseToml.R: Updated, keeping same interface
	* man/parseTOML.Rd: Updated documentation

	* inst/tinytest/bool_datetime.toml: Added local datetime, date and time
	* inst/tinytest/test_bool_datetime.R: Idem

2022-11-18  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2021-12-19  Dirk Eddelbuettel  <edd@debian.org>
