@@ -1,3 +1,8 @@
+2024-04-02  Dirk Eddelbuettel  <edd@debian.org>
+
+	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
+	add r-ci-setup actions
+
 2023-05-26  Walter Somerville  <waltersom@gmail.com>
 
 	* DESCRIPTION (Imports): Updated minimum version of Rcpp
